fix: max width when always show scrollbar

--- a/src/input.css
+++ b/src/input.css
@@ -16,6 +16,7 @@
 .flip-container {
   width: 100vw;
   height: 100vh;
+  max-width: 100%;
   -webkit-perspective: 1000px;
   -moz-perspective: 1000px;
   perspective: 1000px;
